[package]
name = "ggez_testing"
version = "0.1.0"
authors = ["ssk97 <ssk97@case.edu>"]
build = "build.rs"

[dependencies]
ggez = "0.4"
#contains nalgebra
num-traits = "0.1"
#needed for nalgebra generics

#rand = "0.4"
petgraph = "0.4"

serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
#bincode = "1.0"

[profile.dev]
opt-level = 3